--- a/tox.ini
+++ b/tox.ini
@@ -20,5 +20,5 @@ deps =
     pep8
 commands =
     coverage run --source=pike --branch setup.py nosetests
-    pylint --rcfile=.pylintrc pike tests
-    pep8 --config=.pep8.ini pike tests
+    pylint --rcfile=.pylintrc pike
+    pep8 --config=.pep8.ini pike
