--- a/doc/Makefile
+++ b/doc/Makefile
@@ -47,6 +47,7 @@ clean:
 
 apidoc:
 	$(SPHINXAPIDOC) -f -e -o $(APIDIR) ../pike
+	rm $(APIDIR)/*test*
 	cp ../CHANGES.rst changes.rst
 	@echo
 	@echo "Build finished. The RST files are in $(APIDIR)."
